--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <section class="main-section">
+       <div class="loader-title">a loader that is loading</div> 
         <div class="loader-main-base">
             <div class="loader-moving-part"></div>
         </div>
